# Simulink-Sim

./: .gitignore  LICENSE  README.md
FlightGear/: WargFGPacketStructure.xml  launchFlightGearLinux.bash  launchFlightGearWindows.bat
FlightGear/SendToFG/: LinSendToFG  MacSendToFG  build.bash  dump.go  go.mod
FlightGear/SendToFlightGear/: CMakeLists.txt  main.cpp
Infinion/GeneratedCCode/SimulinkModel/Infinion_grt_rtw/: Infinion.cpp  Infinion.h  Infinion_data.cpp  Infinion_private.h  Infinion_types.h  buildInfo.mat  defines.txt  multiword_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h
Infinion/SimulinkModel/: Infinion.slx  importAndFixDatcomData.m  readfile.m
Infinion/SimulinkModel/Utilities/: fuckingAround.slxc
Infinion/ZeroPilotSwHooks/: AirspeedSensorIntercept.cpp  SendToSafetyIntercept.cpp  SensorFusionIntercept.cpp
Infinion/datcomFiles/: datcom.out  infinion.in
Spike/: CMakeLists.txt
Spike/GeneratedCCode/SimulinkCode/Spike_grt_rtw/: Spike.c  Spike.h  Spike_private.h  Spike_types.h  buildInfo.mat  defines.txt  multiword_types.h  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h
Spike/GeneratedCCode/SimulinkModel/Spike_grt_rtw/: Spike.c  Spike.cpp  Spike.h  Spike_data.cpp  Spike_private.h  Spike_types.h  buildInfo.mat  multiword_types.h  rtGetInf.c  rtGetInf.cpp  rtGetInf.h  rtGetNaN.c  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h
Spike/SimulinkModel/: Spike.slx  Spike.slx.r2018b  Spike.slxc  Spike2018.slx  accX.txt  accZ.txt  airspeed.txt  asbSkyHogg.slxc  fuckingAround.slx  fuckingAround.slx.autosave  fuckingAround.slxc  gyrY.txt  lastStr2double.m  nums1.txt  pitch.txt  throttle.txt  yaw.txt
Spike/SimulinkModel/Spike_grt_rtw/: Spike.bat  Spike.c  Spike.cpp  Spike.h  Spike.mk  Spike.rsp  Spike_data.c  Spike_data.cpp  Spike_manifest.txt  Spike_private.h  Spike_types.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  defines.txt  make_exception.mat  modelsources.txt  multiword_types.h  rtGetInf.c  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
Spike/SimulinkModel/Spike_grt_rtw/tmwinternal/: simulink_cache.xml
Spike/SimulinkModel/Utilities/: drawDATCOMaircraft.m  importAndFixDatcomData.m
Spike/SimulinkModel/Utilities/Spike_grt_rtw/: build_exception.mat
Spike/SimulinkModel/datcomFile/: cessna172.inp  datcom.out  datcomExp.out  datcomOld.out
Spike/SimulinkModel/datcomFiles/: cessna172.cfg  cessna172.in  datcom.out
Spike/SimulinkModel/matlabData/: Contents.m  aeroblk_aircaldata.m  aeroblk_guid_dat.m  aeroblk_init_HL20.m  aeroblk_wf_3dof_data.m  asbPrepDatcom.m  asbSkyHoggData.mat  asbguidance_trimlinearize.m  asbguidance_trimlinearize_cst.m  asbhl20.m  asbhl20Example.m  asbinitswarm.m  asbswarm_vehicledata.m  workspace.mat
Spike/SimulinkModel/slprj/_jitprj/: s3aiDjvkrplxMJliKbGc4l.l  s3aiDjvkrplxMJliKbGc4l.mat  sbtk404o6cc4zKugU13af3.l  sbtk404o6cc4zKugU13af3.mat
Spike/SimulinkModel/slprj/_sfprj/EMLReport/: s3aiDjvkrplxMJliKbGc4l.mat  sbtk404o6cc4zKugU13af3.mat
Spike/SimulinkModel/slprj/_sfprj/Spike/_self/rtw/grt/info/: binfo.mat
Spike/SimulinkModel/slprj/_sfprj/Spike/_self/rtw/grt/src/: c1_Spike.tlc
Spike/SimulinkModel/slprj/_sfprj/Spike/_self/sfun/info/: binfo.mat
Spike/SimulinkModel/slprj/_sfprj/precompile/: apudxbruc7jIAbBRu4eROG.mat
Spike/SimulinkModel/slprj/grt/Spike/tmwinternal/: CompileInfo.xml  binfo.mat  minfo.mat
Spike/SimulinkModel/slprj/grt/_sharedutils/: shared_file.dmr  tflSUInfo.mat
Spike/ZeroPilotSwHooks/: AirspeedSensorIntercept.cpp  IMUSensorIntercept.cpp  SendToSafetyIntercept.cpp  main.c  main.cpp
